# mol-conversion

./: .gitignore  README.md  __init__.py  file_conversion.py  memory_conversion.py  pyproject.toml  setup.py  utils.py
.github/workflows/: ci.yml
src/mol_conversion/: __init__.py  file_conversion.py  gcn_encoding.py  memory_conversion.py  mol_conversion.pyi  utils.py
tests/: __init__.py  test_file_conversion.py  test_integration.py  test_memory_conversion.py  test_utils.py
tests/data/: test.xyz
