[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mol-conversion"
version = "0.1.0"
description = "Molecular conversion tools for XYZ format processing"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["chemistry", "molecule", "xyz", "conversion", "openbabel", "rdkit"]
dependencies = [
    "numpy>=1.20.0",
    "rdkit>=2020.03.5",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=1.0",
]
openbabel = [
    # Open Babel must be installed via conda: conda install openbabel -c conda-forge
]

[project.urls]
Homepage = "https://github.com/your-username/mol-conversion"
Documentation = "https://github.com/your-username/mol-conversion#readme"
Repository = "https://github.com/your-username/mol-conversion.git"
"Bug Tracker" = "https://github.com/your-username/mol-conversion/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.flake8]
max-line-length = 88
extend-ignore = ['E203', 'W503']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true