[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mol-conversion"
version = "0.2.0"
description = "Molecular conversion tools for XYZ format processing"
authors = [
    {name = "Dejun Hu", email = "hudejun2002@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["chemistry", "molecule", "xyz", "conversion", "openbabel", "rdkit"]
dependencies = [
    "numpy>=1.20.0",
    "rdkit>=2020.03.5",
    "tqdm>=4.60.0",
    "openbabel-wheel>=3.1.1.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/hdj020402/mol-conversion"
Documentation = "https://github.com/hdj020402/mol-conversion#readme"
Repository = "https://github.com/hdj020402/mol-conversion.git"
"Bug Tracker" = "https://github.com/hdj020402/mol-conversion/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.flake8]
max-line-length = 88
extend-ignore = ['E203', 'W503']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true